--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
-
+cplusplus_lib/include/time/timing.cpp
+cplusplus_lib/include/tools/misc/fortran_routine_block_alias.h
 
 # User-specific directories
 cplusplus_lib/output/
