--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 *.userosscache
 *.sln.docstates
 RxnNetwork_PI
-timing.cpp
-fortran_routine_block_alias.h
+/cplusplus_lib/include/time/timing.cpp
+/cplusplus_lib/include/tools/misc/fortran_routine_block_alias.h
 fortran_lib.u2d
 
 # User-specific files (MonoDevelop/Xamarin Studio)
