Update genetic toggle switch python files.

--- a/cplusplus_lib/tools/data_analysis/genetic_toggle_switch/.vscode/settings.json
+++ b/cplusplus_lib/tools/data_analysis/genetic_toggle_switch/.vscode/settings.json
@@ -1,4 +1,4 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-  "python.pythonPath": "C:/Anaconda2/python.exe"
+  "python.pythonPath": "C:/Program Files/Anaconda3/python"
 }
