--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ fortran_lib.u2d
 *.userprefs
 
 # User-specific directories
-cplusplus_lib/output/
+output/
 fortran_lib/Debug
 fortran_lib/Release
 
