add species group species_pairs-rxns

--- a/SOHR.vcxproj
+++ b/SOHR.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -46,7 +46,6 @@
     <ClInclude Include="include\time\myclock_us.h" />
     <ClInclude Include="include\time\timing.h" />
     <ClInclude Include="include\tools\block_decomposition\block_decomposition.h" />
-    <ClInclude Include="include\tools\chattering\chattering.h" />
     <ClInclude Include="include\tools\map_reduce\map_reduce.h" />
     <ClInclude Include="include\tools\matrix\eigen_unsym.h" />
     <ClInclude Include="include\tools\matrix\matrix_sr.h" />
@@ -57,6 +56,7 @@
     <ClInclude Include="include\tools\misc\misc_template.h" />
     <ClInclude Include="include\tools\misc\tree_bundled.h" />
     <ClInclude Include="include\tools\my_debug\my_debug.h" />
+    <ClInclude Include="include\tools\species_group\species_group.h" />
     <ClInclude Include="include\tools\union_find\unionFind.h" />
   </ItemGroup>
   <ItemGroup>
@@ -86,10 +86,10 @@
     <ClCompile Include="src\time\myclock_us.cpp" />
     <ClCompile Include="src\time\timing.cpp" />
     <ClCompile Include="src\tools\block_decomposition\block_decomposition.cpp" />
-    <ClCompile Include="src\tools\chattering\chattering.cpp" />
     <ClCompile Include="src\tools\map_reduce\map_reduce.cpp" />
     <ClCompile Include="src\tools\matrix\matrix_sr.cpp" />
     <ClCompile Include="src\tools\my_debug\my_debug.cpp" />
+    <ClCompile Include="src\tools\species_group\species_group.cpp" />
     <ClCompile Include="src\tools\union_find\unionFind.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
